# inject-hooks-android-rs

./: .gitignore  Makefile  README.md
hook/: Cargo.toml  README.md  build.rs
hook/src/: elf.rs  hook.rs  lib.rs  log.rs  patch.rs
hook/src/hooks/: fileio.rs  injection_log.rs  mod.rs
injector/: Cargo.toml  README.md
injector/src/: injector.rs  main.rs  ptrace.rs  utils.rs
victim/: Cargo.toml
victim/src/: main.rs
vscode/: settings.json
