[package]
name = "hook"
version = "0.1.0"
edition = "2021"

# Authors and other optional metadata
authors = ["Tim Strazzere <tim@strazzere.com"]
description = "Hooking elf files in an automated way"
license = "Apache 2.0"
repository = "https://github.com/strazzere/inject-hooks-android-rs/hook"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2"
ctor = "0.1"
once_cell = "1.17.1"
goblin = "0.9.3"
memchr = "2.7.4"
